--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/preact": "^3.2.3",
     "@testing-library/user-event": "^14.5.2",
