--- a/.github/workflows/localization.yml
+++ b/.github/workflows/localization.yml
@@ -190,8 +190,13 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Install rollup native dependencies
+        run: npm install @rollup/rollup-linux-x64-gnu --no-save || true
+
       - name: Run localization tests
-        run: npm run test:i18n
+        run: npx vitest run src/__tests__/i18n/
+        env:
+          NODE_OPTIONS: '--max-old-space-size=4096'
 
       - name: Test locale loading
         run: |
