--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "lint": "eslint src --ext .ts,.tsx",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-    "test:watch": "vitest --watch",
     "test:i18n": "vitest run src/__tests__/i18n/",
     "validate-messages": "node scripts/validate-messages.js",
     "check-missing-keys": "node scripts/check-missing-keys.js"
@@ -41,8 +41,8 @@
     "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
-    "@vitest/coverage-v8": "^1.2.1",
-    "@vitest/ui": "^1.2.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-import-resolver-typescript": "^4.4.4",
@@ -56,9 +56,9 @@
     "prettier": "^3.6.2",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
-    "vite": "5.0.10",
+    "vite": "^7.0.5",
     "vite-plugin-web-extension": "^4.1.1",
-    "vitest": "^1.2.1"
+    "vitest": "^3.2.4"
   },
   "keywords": [
     "chrome-extension",
