--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "requestkit",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "RequestKit - A sophisticated Chrome extension for injecting custom headers on network requests using wildcard patterns, featuring an advanced Variable System with hierarchical scoping",
   "type": "module",
   "scripts": {
@@ -8,17 +8,20 @@
     "dev:ui": "vite --config vite.dev.config.ts",
     "build": "tsc && vite build && npm run post-build",
     "build:dev": "vite build --config vite.dev.config.ts",
-    "post-build": "cp manifest.json dist/ && cp rules.json dist/ && cp -r src/assets dist/ && cp src/content/injected-script.ts dist/src/content/injected-script.js && mkdir -p dist/src/shared && cp src/shared/theme-init.js dist/src/shared/",
+    "post-build": "cp manifest.json dist/ && cp rules.json dist/ && cp -r src/assets dist/ && cp src/content/injected-script.ts dist/src/content/injected-script.js && mkdir -p dist/src/shared && cp src/shared/theme-init.js dist/src/shared/ && cp -r _locales dist/",
     "build:extension": "npm run build",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
     "lint": "eslint src --ext .ts,.tsx",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui",
-    "test:watch": "vitest --watch"
+    "test:i18n": "vitest run src/__tests__/i18n/",
+    "validate-messages": "node scripts/validate-messages.js",
+    "check-missing-keys": "node scripts/check-missing-keys.js"
   },
   "dependencies": {
     "@preact/signals": "^1.2.2",
@@ -29,6 +32,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.1.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/preact": "^3.2.3",
     "@testing-library/user-event": "^14.5.2",
@@ -37,8 +41,8 @@
     "@types/node": "^20.11.5",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
-    "@vitest/coverage-v8": "^1.2.1",
-    "@vitest/ui": "^1.2.1",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-import-resolver-typescript": "^4.4.4",
@@ -52,9 +56,9 @@
     "prettier": "^3.6.2",
     "tailwindcss": "3.4.0",
     "typescript": "5.3.3",
-    "vite": "5.0.10",
+    "vite": "^7.0.5",
     "vite-plugin-web-extension": "^4.1.1",
-    "vitest": "^1.2.1"
+    "vitest": "^3.2.4"
   },
   "keywords": [
     "chrome-extension",
